--- a/omniNotes/src/main/res/values-cs-rCZ/strings.xml
+++ b/omniNotes/src/main/res/values-cs-rCZ/strings.xml
@@ -21,7 +21,7 @@
   <string name="title_item_list">Poznámky</string>
   <string name="add_note">Přidat poznámku</string>
   <string name="title">Název</string>
-  <string name="title_activity_list">Omni Notes</string>
+  <string name="title_activity_list">Notes™ Pro</string>
   <string name="search">Hledat</string>
   <string name="search_hint">Hledat v poznámkách</string>
   <string name="content">Obsah</string>
@@ -51,7 +51,7 @@
   <string name="note_unarchived">Poznámka obnovena z archivu</string>
   <string name="note">Poznámka</string>
   <string name="share_message_chooser">Sdílet pomocí</string>
-  <string name="shared_content_sign">\n【by Omni Notes】</string>
+  <string name="shared_content_sign">\n【by Notes™ Pro】</string>
   <string name="sort">Řazení</string>
   <string name="select_sorting_column">Řadit podle</string>
   <string name="tap_to_undo">Klepnutím zrušit</string>
@@ -126,10 +126,10 @@
   <string name="checklist_keep_checked">Ponechat zaškrtnuté položky</string>
   <string name="checklist_keep_symbols">Ponechat zaškrtnutí</string>
   <string name="sketch">Skica</string>
-  <string name="crash_dialog_text">Něco se v Omni Notes pokazilo.\nPoslat hlášení o chybách vývojáři?</string>
+  <string name="crash_dialog_text">Něco se v Notes™ Pro pokazilo.\nPoslat hlášení o chybách vývojáři?</string>
   <string name="crash_dialog_comment_prompt">Vložte Váš komentář (volitelné):</string>
-  <string name="crash_toast">Něco se nezdařilo v Omni Notes\nA zpráva byla odeslána reportem vývojáři!</string>
-  <string name="new_update_available">Nová verze Omni Notes je k dispozici, chcete aplikaci aktualizovat?</string>
+  <string name="crash_toast">Něco se nezdařilo v Notes™ Pro\nA zpráva byla odeslána reportem vývojáři!</string>
+  <string name="new_update_available">Nová verze Notes™ Pro je k dispozici, chcete aplikaci aktualizovat?</string>
   <string name="update">Aktualizujte a ohodnoťte!</string>
   <string name="not_now">Později</string>
   <string name="title_activity_sketch">Skica</string>
@@ -204,7 +204,7 @@
   <string name="info">Informace</string>
   <string name="completed">Completed</string>
   <!-- Settings -->
-  <string name="dashclock_description">Zobrazí statistiky a připomenutí kterým brzy vyprší platnost z Omni Notes</string>
+  <string name="dashclock_description">Zobrazí statistiky a připomenutí kterým brzy vyprší platnost z Notes™ Pro</string>
   <string name="settings">Nastavení</string>
   <string name="settings_about">Informace</string>
   <string name="settings_category_other">Ostatní</string>
@@ -239,7 +239,7 @@
   <string name="settings_changelog">Přehled změn</string>
   <string name="settings_enable_editor_links">Rozpoznávání odkazů</string>
   <string name="settings_max_video_size">Video přílohy</string>
-  <string name="settings_screen_data">Data</string>
+  <string name="settings_screen_data">Backup &amp; Password</string>
   <string name="settings_backup">Zálohování</string>
   <string name="settings_password">Heslo</string>
   <string name="settings_password_access">Požadovat heslo</string>
@@ -356,8 +356,8 @@
   <string name="stats_max_characters">Maximum znaků</string>
   <string name="stats_avg_characters">Průměrně znaků</string>
   <!-- Instructions -->
-  <string name="tour_request_start">Spustili jste Omni Notes poprvé. Chcete spustit prohlídku aplikace?</string>
-  <string name="tour_listactivity_intro_title">Vítejte v Omni Notes!</string>
+  <string name="tour_request_start">Spustili jste Notes™ Pro poprvé. Chcete spustit prohlídku aplikace?</string>
+  <string name="tour_listactivity_intro_title">Vítejte v Notes™ Pro!</string>
   <string name="tour_listactivity_intro_detail">stiskněte tlačítko \"Pokračovat\" pokračování v prohlídce</string>
   <string name="tour_listactivity_actions_title">Akce</string>
   <string name="tour_listactivity_actions_detail">Vytváření nových poznámek, řazení a vlastnosti</string>
@@ -372,13 +372,13 @@
   <string name="tour_detailactivity_reminder_title">Stačí stisknout</string>
   <string name="tour_detailactivity_reminder_detail">Podržení má na objekt (příloha, poloha, připomenutí) jiné účinky, než krátké stisknutí!</string>
   <string name="tour_detailactivity_links_title">Odkazy</string>
-  <string name="tour_detailactivity_links_detail">URL, e-mail addresses and telephone numbers recognition</string>
+ <string name="tour_detailactivity_links_detail">Add various kinds of media files in your notes</string>
   <string name="tour_detailactivity_swipe_title">Tažení prstem</string>
   <string name="tour_detailactivity_swipe_detail">Vytvořte novou poznámku \nbez opuštění té, kterou \nprávě upravujete</string>
   <string name="tour_detailactivity_save_title">Uložit</string>
   <string name="tour_detailactivity_save_detail">Pro návrat stiskněte tlačíto \"zpět\", nebo tlačítko vašeho zařízení</string>
   <string name="tour_listactivity_final_title">Užijte si aplikaci</string>
-  <string name="tour_listactivity_final_detail">Děkujeme, že používáte Omni Notes \n\nOpen-source alternativu pro psaní \npoznámek v práci i ve voném čase!</string>
+  <string name="tour_listactivity_final_detail">Děkujeme, že používáte Notes™ Pro \n\nOpen-source alternativu pro psaní \npoznámek v práci i ve voném čase!</string>
   <string name="tour_community">Přihlásit se do komunity pro spolupráci!</string>
   <!-- Accessibility -->
   <string name="drawer_open">lišta otevřena</string>
