--- a/omniNotes/src/main/res/values-fa-rIR/strings.xml
+++ b/omniNotes/src/main/res/values-fa-rIR/strings.xml
@@ -21,7 +21,7 @@
   <string name="title_item_list">یادداشت‌ها</string>
   <string name="add_note">اضافه کردن یادداشت</string>
   <string name="title">عنوان</string>
-  <string name="title_activity_list">Omni Notes</string>
+  <string name="title_activity_list">Notes™ Pro</string>
   <string name="search">جستجو</string>
   <string name="search_hint">جستجو در یادداشت ها</string>
   <string name="content">محتوا</string>
@@ -51,7 +51,7 @@
   <string name="note_unarchived">یادداشت از آرشیو بازیابی شد</string>
   <string name="note">یادداشت</string>
   <string name="share_message_chooser">اشتراک با</string>
-  <string name="shared_content_sign">\n【by Omni Notes】</string>
+  <string name="shared_content_sign">\n【by Notes™ Pro】</string>
   <string name="sort">مرتب‌سازی</string>
   <string name="select_sorting_column">مرتب سازی بر اساس</string>
   <string name="tap_to_undo">برای بازگردانی لمس کنید</string>
@@ -126,10 +126,10 @@
   <string name="checklist_keep_checked">موارد انتخاب شده را نگه دارید</string>
   <string name="checklist_keep_symbols">نگه داشتن علامت</string>
   <string name="sketch">حالت طراحی</string>
-  <string name="crash_dialog_text">اشتباهی رخ داده در Omni Notes\n گزارش بصورت خودکار برای توسعه دهندگان ارسال شود؟ </string>
+  <string name="crash_dialog_text">اشتباهی رخ داده در Notes™ Pro\n گزارش بصورت خودکار برای توسعه دهندگان ارسال شود؟ </string>
   <string name="crash_dialog_comment_prompt">درج  نظر در اینجا (اختیاری):</string>
-  <string name="crash_toast">اشتباهی رخ داده در Omni Notes\n گزارشی برای توسعه دهندگان ارسال شد!</string>
-  <string name="new_update_available">نسخه جدید Omni Notes موجود است مایل به بروزرسانی هستید؟</string>
+  <string name="crash_toast">اشتباهی رخ داده در Notes™ Pro\n گزارشی برای توسعه دهندگان ارسال شد!</string>
+  <string name="new_update_available">نسخه جدید Notes™ Pro موجود است مایل به بروزرسانی هستید؟</string>
   <string name="update">بروزرسانی و امتیازدهی!</string>
   <string name="not_now">الآن نه</string>
   <string name="title_activity_sketch">حالت طراحی</string>
@@ -204,7 +204,7 @@
   <string name="info">اطلاعات</string>
   <string name="completed">کامل شد</string>
   <!-- Settings -->
-  <string name="dashclock_description">برخی آمارها و یادآورهای منقضی از یادداشت های Omni را نمایش می دهد</string>
+  <string name="dashclock_description">برخی آمارها و یادآورهای منقضی از یادداشت های Notes™ Pro را نمایش می دهد</string>
   <string name="settings">تنظیمات</string>
   <string name="settings_about">اطلاعات</string>
   <string name="settings_category_other">دیگر</string>
@@ -356,8 +356,8 @@
   <string name="stats_max_characters">حداکثر کاراکترها</string>
   <string name="stats_avg_characters">میانگین کاراکترها</string>
   <!-- Instructions -->
-  <string name="tour_request_start">شما برای اولین بار Omni Note را راه اندازی کردید، آیا میخواهید تور برنامه را بگیرید؟</string>
-  <string name="tour_listactivity_intro_title">خوش آمدید به Omni Omni!</string>
+  <string name="tour_request_start">شما برای اولین بار Notes™ Pro را راه اندازی کردید، آیا میخواهید تور برنامه را بگیرید؟</string>
+  <string name="tour_listactivity_intro_title">خوش آمدید به Notes™ Pro Notes™ Pro!</string>
   <string name="tour_listactivity_intro_detail">برای ادامه تور روی \"ادامه\" کلیک کنید</string>
   <string name="tour_listactivity_actions_title">عملیات</string>
   <string name="tour_listactivity_actions_detail">ایجاد یادداشت جدید، مرتب کردن آنها، دسترسی به تنظیمات</string>
@@ -378,7 +378,7 @@
   <string name="tour_detailactivity_save_title">ذخیره</string>
   <string name="tour_detailactivity_save_detail">برای برگشت ،دکمه ناوبری \"بالا\" را از دکمه های دستگاه خود بزنید</string>
   <string name="tour_listactivity_final_title">لذت ببرید</string>
-  <string name="tour_listactivity_final_detail">با تشکر برای استفاده از / n Omni Notes جایگزین متن‌باز برای بهره وری از اوقات فراغت یادداشت برداری!</string>
+  <string name="tour_listactivity_final_detail">با تشکر برای استفاده از / n Notes™ Pro جایگزین متن‌باز برای بهره وری از اوقات فراغت یادداشت برداری!</string>
   <string name="tour_community">برای مشارکت در اجتماع عضو شوید!</string>
   <!-- Accessibility -->
   <string name="drawer_open">کشو باز است</string>
