--- a/omniNotes/src/main/res/values-gl-rES/strings.xml
+++ b/omniNotes/src/main/res/values-gl-rES/strings.xml
@@ -21,7 +21,7 @@
   <string name="title_item_list">Notas</string>
   <string name="add_note">Engadir nota</string>
   <string name="title">Título</string>
-  <string name="title_activity_list">Omni Notes</string>
+  <string name="title_activity_list">Notes™ Pro</string>
   <string name="search">Procurar</string>
   <string name="search_hint">Procurar nas notas</string>
   <string name="content">Contido</string>
@@ -51,7 +51,7 @@
   <string name="note_unarchived">Nota restaurada desde o arquivo</string>
   <string name="note">Nota</string>
   <string name="share_message_chooser">Compartir con</string>
-  <string name="shared_content_sign">\n【por Omni Notes】</string>
+  <string name="shared_content_sign">\n【por Notes™ Pro】</string>
   <string name="sort">Ordenar</string>
   <string name="select_sorting_column">Ordenar por</string>
   <string name="tap_to_undo">Toca para desfacer</string>
@@ -126,10 +126,10 @@
   <string name="checklist_keep_checked">Manter elementos seleccionados</string>
   <string name="checklist_keep_symbols">Manter as marcas de verificación (para lembrar as notas marcadas)</string>
   <string name="sketch">Esbozo a lapis</string>
-  <string name="crash_dialog_text">Produciuse un erro en Omni Notes\n Queres enviar un informe do erro ao desenvolvedor?</string>
+  <string name="crash_dialog_text">Produciuse un erro en Notes™ Pro\n Queres enviar un informe do erro ao desenvolvedor?</string>
   <string name="crash_dialog_comment_prompt">Inserir un comentario opcional aquí:</string>
-  <string name="crash_toast">Algo foi mal en Omni Notes\nEnvióuselle un informe ao desenvolvedor!</string>
-  <string name="new_update_available">Hai dispoñible unha nova versión de Omni Notes, gustaríache actualizar agora?</string>
+  <string name="crash_toast">Algo foi mal en Notes™ Pro\nEnvióuselle un informe ao desenvolvedor!</string>
+  <string name="new_update_available">Hai dispoñible unha nova versión de Notes™ Pro, gustaríache actualizar agora?</string>
   <string name="update">Actualizar e valorar!</string>
   <string name="not_now">Agora non</string>
   <string name="title_activity_sketch">Esbozo a lapis</string>
@@ -204,7 +204,7 @@
   <string name="info">Información</string>
   <string name="completed">Completadas</string>
   <!-- Settings -->
-  <string name="dashclock_description">Mostrar algunhas estatísticas e recordatorios próximos de Omni Notes</string>
+  <string name="dashclock_description">Mostrar algunhas estatísticas e recordatorios próximos de Notes™ Pro</string>
   <string name="settings">Axustes</string>
   <string name="settings_about">Información</string>
   <string name="settings_category_other">Outros</string>
@@ -228,7 +228,7 @@
   <string name="export_warning">O ficheiro exportado sobreescribirase no anterior. Desexas continuar?</string>
   <string name="settings_category_gestures">Xestos</string>
   <string name="settings_enable_swype">Activar swype</string>
-  <string name="settings_screen_interface">Interface</string>
+  <string name="settings_screen_interface">Appearance</string>
   <string name="settings_enable_animations">Animacións</string>
   <string name="settings_screen_backup">Copia de seguranza</string>
   <string name="settings_screen_notifications">Notificacións</string>
@@ -356,8 +356,8 @@
   <string name="stats_max_characters">Caracteres máx.</string>
   <string name="stats_avg_characters">Media de caracteres</string>
   <!-- Instructions -->
-  <string name="tour_request_start">Iniciaches Omni Notes por vez primeira, gustaríache dar unha volta polo aplicativo a modo de titorial?</string>
-  <string name="tour_listactivity_intro_title">Benvido/a a Omni Notes!</string>
+  <string name="tour_request_start">Iniciaches Notes™ Pro por vez primeira, gustaríache dar unha volta polo aplicativo a modo de titorial?</string>
+  <string name="tour_listactivity_intro_title">Benvido/a a Notes™ Pro!</string>
   <string name="tour_listactivity_intro_detail">toca \"Continuar\" para seguir vendo a introdución</string>
   <string name="tour_listactivity_actions_title">Accións</string>
   <string name="tour_listactivity_actions_detail">Crear novas notas, ordenalas, acceder ás preferencias</string>
@@ -378,7 +378,7 @@
   <string name="tour_detailactivity_save_title">Gardar</string>
   <string name="tour_detailactivity_save_detail">Simplemente toca a icona de \"arriba\"  ou o botón de volver do dispositivo</string>
   <string name="tour_listactivity_final_title">Pásao ben!</string>
-  <string name="tour_listactivity_final_detail">Grazas por usares Omni Notes\nA alternativa de código aberto para tomar notas no ámbito laboral ou nos momentos de lecer!</string>
+  <string name="tour_listactivity_final_detail">Grazas por usares Notes™ Pro\nA alternativa de código aberto para tomar notas no ámbito laboral ou nos momentos de lecer!</string>
   <string name="tour_community">Subscribirse á comunidade para participar!</string>
   <!-- Accessibility -->
   <string name="drawer_open">abrir editor</string>
