--- a/omniNotes/src/main/res/values-pl-rPL/strings.xml
+++ b/omniNotes/src/main/res/values-pl-rPL/strings.xml
@@ -18,10 +18,10 @@
   -->
 <resources>
   <!-- Activities -->
-  <string name="title_item_list">Notes</string>
+  <string name="title_item_list">My Notes</string>
   <string name="add_note">Dodaj Notatkę</string>
   <string name="title">Tytuł</string>
-  <string name="title_activity_list">Omni Notes</string>
+  <string name="title_activity_list">Notes™ Pro</string>
   <string name="search">Szukaj</string>
   <string name="search_hint">Wyszukaj w notesie</string>
   <string name="content">Zawartość</string>
@@ -51,11 +51,11 @@
   <string name="note_unarchived">Notatka przywrócona z archiwum</string>
   <string name="note">Notatka</string>
   <string name="share_message_chooser">Udostępnij</string>
-  <string name="shared_content_sign">\n【przez Omni Notes】</string>
+  <string name="shared_content_sign">\n【przez Notes™ Pro】</string>
   <string name="sort">Sortuj</string>
   <string name="select_sorting_column">Sortuj według</string>
   <string name="tap_to_undo">Dotknij, aby cofnąć</string>
-  <string name="alarm_set_on">Przypomnienie</string>
+  <string name="alarm_set_on">PrzypNotes™ Proenie</string>
   <string name="starting_from">począwszy od</string>
   <string name="at_time">w</string>
   <string name="discard_changes">Porzuć zmiany</string>
@@ -67,8 +67,8 @@
   <string name="location">Lokalizacja</string>
   <string name="pushbullet">Pushbullet</string>
   <string name="remove_location">Usunąć lokalizację?</string>
-  <string name="remove_reminder">Usunąć przypomnienie?</string>
-  <string name="add_reminder">Dodaj przypomnienie</string>
+  <string name="remove_reminder">Usunąć przypNotes™ Proenie?</string>
+  <string name="add_reminder">Dodaj przypNotes™ Proenie</string>
   <string name="location_not_found">Nie znaleziono lokalizacji</string>
   <string name="record">Nagraj</string>
   <string name="stop">Zatrzymaj</string>
@@ -106,7 +106,7 @@
   <string name="delete_category_confirmation">This category is used by some notes.\nConfirm notes un-categorization and category deletion?</string>
   <string name="discard">Odrzuć</string>
   <string name="remove_category">Usuń kategorię</string>
-  <string name="no_tags_created">No tags available yet\nCreate them by writing hashtags into your notes</string>
+  <string name="no_tags_created">No tags available yet!</string>
   <string name="no_categories_created">Nie ma jeszcze utworzonych kategorii</string>
   <string name="notes_category_removed">Kategoria usunięta z notatki</string>
   <string name="notes_categorized_as">Notatki klasyfikowane jako</string>
@@ -126,10 +126,10 @@
   <string name="checklist_keep_checked">Zachowaj zaznaczone elementy</string>
   <string name="checklist_keep_symbols">Zachowaj oznaczenia</string>
   <string name="sketch">Szkic</string>
-  <string name="crash_dialog_text">Coś się zepsuło w Omni Notes\nWysłać automatyczny raport do autora?</string>
+  <string name="crash_dialog_text">Coś się zepsuło w Notes™ Pro\nWysłać automatyczny raport do autora?</string>
   <string name="crash_dialog_comment_prompt">Wstaw komentarz tutaj (opcjonalne):</string>
-  <string name="crash_toast">Coś się zepsuło w Omni Notes\nRaport został wysłany do autora!</string>
-  <string name="new_update_available">Nowa wersja Omni Notes jest dostępna, czy chcesz zaktualizować?</string>
+  <string name="crash_toast">Coś się zepsuło w Notes™ Pro\nRaport został wysłany do autora!</string>
+  <string name="new_update_available">Nowa wersja Notes™ Pro jest dostępna, czy chcesz zaktualizować?</string>
   <string name="update">Aktualizuj i oceń!</string>
   <string name="not_now">Nie teraz</string>
   <string name="title_activity_sketch">Szkic</string>
@@ -137,15 +137,15 @@
   <string name="colors">Kolory</string>
   <string name="stroke">Usuń</string>
   <string name="erase_sketch">Wymazać szkic?</string>
-  <string name="no_reminder_set">Nie ustawione przypomnienie</string>
+  <string name="no_reminder_set">Nie ustawione przypNotes™ Proenie</string>
   <string name="saturation">Nasycenie</string>
   <string name="opacity">Przezroczystość</string>
   <string name="dismiss">Odrzuć</string>
-  <string name="snooze">Przypomnij mi później</string>
+  <string name="snooze">PrzypNotes™ Proj mi później</string>
   <string name="error_importing_some_attachments">Błąd importowania załączników</string>
   <string name="error_saving_attachments">Wystąpił błąd podczas zapisywania załączników</string>
   <string name="proceed">Kontynuuj</string>
-  <string name="contracted_view">Widok pomniejszony</string>
+  <string name="contracted_view">Widok pNotes™ Proejszony</string>
   <string name="expanded_view">Widok rozszerzony</string>
   <string name="grid_view">Grid view</string>
   <string name="add_shortcut">Utwórz skrót</string>
@@ -158,7 +158,7 @@
   <string name="show_timestamps">Show timestamps</string>
   <string name="choose_action">Wybierz czynność</string>
   <string name="edit">Edytuj</string>
-  <string name="reminders">przypomnienia</string>
+  <string name="reminders">przypNotes™ Proenia</string>
   <string name="not_expired">nie minął</string>
   <string name="expired">minął</string>
   <string name="today">dzisiaj</string>
@@ -188,8 +188,8 @@
   <string name="use_current_location">Użyj bieżącej lokalizacji</string>
   <string name="filter">Filtr</string>
   <string name="remove_filter">Usuń filtr</string>
-  <string name="filter_old_reminders">Ukryj stare przypomnienia</string>
-  <string name="remove_filter_old_reminders">Pokaż stare przypomnienia</string>
+  <string name="filter_old_reminders">Ukryj stare przypNotes™ Proenia</string>
+  <string name="remove_filter_old_reminders">Pokaż stare przypNotes™ Proenia</string>
   <string name="filter_archived">Ukryj zarchiwizowane notatki</string>
   <string name="remove_filter_archived">Pokaż zarchiwizowane notatki</string>
   <string name="permission_external_storage">Uprawnienia do zapisu na zewnętrznej pamięci masowej są niezbędne, aby umożliwić tworzenie kopii zapasowych w folderach publicznych</string>
@@ -204,7 +204,7 @@
   <string name="info">Info</string>
   <string name="completed">Completed</string>
   <!-- Settings -->
-  <string name="dashclock_description">Wyświetla niektóre statystyki i wygasłe przypomnienia z Omni Notes</string>
+  <string name="dashclock_description">Wyświetla niektóre statystyki i wygasłe przypNotes™ Proenia z Notes™ Pro</string>
   <string name="settings">Ustawienia</string>
   <string name="settings_about">Informacja</string>
   <string name="settings_category_other">Inne</string>
@@ -233,7 +233,7 @@
   <string name="settings_screen_backup">Kopia</string>
   <string name="settings_screen_notifications">Powiadomienia</string>
   <string name="settings_enable_vibration">Wibracje</string>
-  <string name="settings_notification_enable_boot_persistence">Włącz przypomnienia o powiadomieniach</string>
+  <string name="settings_notification_enable_boot_persistence">Włącz przypNotes™ Proenia o powiadomieniach</string>
   <string name="settings_notification_enable_boot_persistence_summary">Zezwalaj aplikacji na dostęp do powiadomień, pozwalając przetrwać do ponownego uruchomienia</string>
   <string name="settings_screen_navigation">Nawigacja</string>
   <string name="settings_changelog">Lista zmian</string>
@@ -277,7 +277,7 @@
   <string name="settings_enable_tag_marker_full_summary">W pełni kolorowe notatki w widoku listy i szczegółów</string>
   <string name="settings_enable_tag_marker_full_list_only">Tylko lista</string>
   <string name="settings_enable_tag_marker_full_list_only_summary">Włącza pełen kolor w widoku listy. W widoku szczegółów będą kolorowe tylko znaczniki</string>
-  <string name="settings_notification_snooze_delay">Opóźnienie drugiego przypomnienia</string>
+  <string name="settings_notification_snooze_delay">Opóźnienie drugiego przypNotes™ Proenia</string>
   <string name="minutes">minuty</string>
   <string name="settings_simple_calendar">Prosty kalendarz i czas</string>
   <string name="settings_simple_calendar_summary">Użyj interfejsu Androida (prostsze) do wyboru daty/czasu, zamiast interfejsu Google</string>
@@ -286,7 +286,7 @@
   <string name="settings_tour_show_again_summary">Pokaż mi przewodnik po aplikacji ponownie</string>
   <string name="backup_include_settings">Uwzględnione ustawienia i hasła</string>
   <string name="settings_included">ustawienia uwzględnione</string>
-  <string name="settings_password_question_instructions">Wstaw pytanie i poufną odpowiedź w przypadku zapomnienia hasła</string>
+  <string name="settings_password_question_instructions">Wstaw pytanie i poufną odpowiedź w przypadku zapNotes™ Proenia hasła</string>
   <string name="settings_password_question">Pytanie</string>
   <string name="settings_password_answer">Odpowiedź</string>
   <string name="settings_password_answer_check">Potwierdź odpowiedź</string>
@@ -356,8 +356,8 @@
   <string name="stats_max_characters">Max chars</string>
   <string name="stats_avg_characters">Average chars</string>
   <!-- Instructions -->
-  <string name="tour_request_start">Uruchomiono Omni Notes po raz pierwszy, masz ochotę na przewodnik po aplikacji?</string>
-  <string name="tour_listactivity_intro_title">Witamy w Omni Notes!</string>
+  <string name="tour_request_start">Uruchomiono Notes™ Pro po raz pierwszy, masz ochotę na przewodnik po aplikacji?</string>
+  <string name="tour_listactivity_intro_title">Witamy w Notes™ Pro!</string>
   <string name="tour_listactivity_intro_detail">naciśnij \"Kontynuuj\", aby kontynuować zwiedzanie</string>
   <string name="tour_listactivity_actions_title">Działania</string>
   <string name="tour_listactivity_actions_detail">Tworzenie nowych notatek, sortowanie ich, dostęp do preferencji</string>
@@ -370,23 +370,23 @@
   <string name="tour_detailactivity_action_title">Więcej</string>
   <string name="tour_detailactivity_action_detail">Udostępniaj, znaczniki, archiwum, ochrona i inne&#8230;</string>
   <string name="tour_detailactivity_reminder_title">Po prostu naciśnij</string>
-  <string name="tour_detailactivity_reminder_detail">Długi nacisk ma inne działanie na obiekt (załącznik, lokalizacja, przypomnienie) niż krótki nacisk!</string>
+  <string name="tour_detailactivity_reminder_detail">Długi nacisk ma inne działanie na obiekt (załącznik, lokalizacja, przypNotes™ Proenie) niż krótki nacisk!</string>
   <string name="tour_detailactivity_links_title">Linki</string>
-  <string name="tour_detailactivity_links_detail">URL, e-mail addresses and telephone numbers recognition</string>
+ <string name="tour_detailactivity_links_detail">Add various kinds of media files in your notes</string>
   <string name="tour_detailactivity_swipe_title">Przeciągnij</string>
   <string name="tour_detailactivity_swipe_detail">Tworzenie nowych notatek bez \n pozostawiając jedną, którą edytujesz</string>
   <string name="tour_detailactivity_save_title">Zapisz</string>
   <string name="tour_detailactivity_save_detail">Aby wrócić, naciśnij ikonę nawigacji \"góra\", lub przycisk urządzenia</string>
   <string name="tour_listactivity_final_title">Korzystaj z przyjemnością</string>
-  <string name="tour_listactivity_final_detail">Dziękujemy za korzystanie z Omni Notes \nThe opensource alternative for productivity and leisure note-taking!</string>
+  <string name="tour_listactivity_final_detail">Dziękujemy za korzystanie z Notes™ Pro \nThe proprietary alternative for productivity and leisure note-taking!</string>
   <string name="tour_community">Zapisz się do Wspólnoty, weź udział!</string>
   <!-- Accessibility -->
   <string name="drawer_open">otwarta szuflada</string>
   <string name="drawer_close">zamknięta szuflada</string>
-  <string name="reminder">przypomnienie</string>
+  <string name="reminder">przypNotes™ Proenie</string>
   <string name="stroke_size">rozmiar obrysu</string>
   <string name="note_thumbnail">miniatura notatki</string>
-  <string name="note_reminder_symbol">symbol przypomnienia notatki</string>
+  <string name="note_reminder_symbol">symbol przypNotes™ Proenia notatki</string>
   <string name="navigation_drawer_open">Otwórz panel nawigacyjny</string>
   <string name="navigation_drawer_close">Zamknij panel nawigacyjny</string>
 </resources>
