--- a/omniNotes/src/main/res/values-pt-rPT/strings.xml
+++ b/omniNotes/src/main/res/values-pt-rPT/strings.xml
@@ -21,7 +21,7 @@
   <string name="title_item_list">Notas</string>
   <string name="add_note">Adicionar nota</string>
   <string name="title">Título</string>
-  <string name="title_activity_list">Omni Notes</string>
+  <string name="title_activity_list">Notes™ Pro</string>
   <string name="search">Procurar</string>
   <string name="search_hint">Procurar nas notas</string>
   <string name="content">Conteúdo</string>
@@ -51,7 +51,7 @@
   <string name="note_unarchived">Nota restaurada a partir do arquivo</string>
   <string name="note">Nota</string>
   <string name="share_message_chooser">Partilhar via</string>
-  <string name="shared_content_sign">\n【por Omni Notes】</string>
+  <string name="shared_content_sign">\n【por Notes™ Pro】</string>
   <string name="sort">Ordenar</string>
   <string name="select_sorting_column">Ordenar por</string>
   <string name="tap_to_undo">Toque para anular alteração</string>
@@ -126,10 +126,10 @@
   <string name="checklist_keep_checked">Manter itens marcados</string>
   <string name="checklist_keep_symbols">Manter as marcas de verificação (para lembrar itens marcados)</string>
   <string name="sketch">Desenho</string>
-  <string name="crash_dialog_text">Algo de errado aconteceu no Omni Notes\n Gostaria de enviar um relatório para o programador?</string>
+  <string name="crash_dialog_text">Algo de errado aconteceu no Notes™ Pro\n Gostaria de enviar um relatório para o programador?</string>
   <string name="crash_dialog_comment_prompt">Insira um comentário opcional aqui:</string>
-  <string name="crash_toast">Algo correu mal no Omni Notes\nUm relatório foi enviado para o programador!</string>
-  <string name="new_update_available">Uma nova versão do Omni Notes está disponível, deseja actualizar?</string>
+  <string name="crash_toast">Algo correu mal no Notes™ Pro\nUm relatório foi enviado para o programador!</string>
+  <string name="new_update_available">Uma nova versão do Notes™ Pro está disponível, deseja actualizar?</string>
   <string name="update">Actualize e classifique!</string>
   <string name="not_now">Agora não</string>
   <string name="title_activity_sketch">Desenho</string>
@@ -204,7 +204,7 @@
   <string name="info">Informações</string>
   <string name="completed">Concluído</string>
   <!-- Settings -->
-  <string name="dashclock_description">Mostra algumas estatísticas e próximos alertas do Omni Notes</string>
+  <string name="dashclock_description">Mostra algumas estatísticas e próximos alertas do Notes™ Pro</string>
   <string name="settings">Definições</string>
   <string name="settings_about">Informações</string>
   <string name="settings_category_other">Outro</string>
@@ -228,7 +228,7 @@
   <string name="export_warning">A exportação do ficheiro irá substituir o anterior. Prosseguir?</string>
   <string name="settings_category_gestures">Gestos</string>
   <string name="settings_enable_swype">Activar o swype</string>
-  <string name="settings_screen_interface">Interface</string>
+  <string name="settings_screen_interface">Appearance</string>
   <string name="settings_enable_animations">Animações</string>
   <string name="settings_screen_backup">Cópia de segurança</string>
   <string name="settings_screen_notifications">Notificações</string>
@@ -356,8 +356,8 @@
   <string name="stats_max_characters">Máximo caracteres</string>
   <string name="stats_avg_characters">Média caracteres</string>
   <!-- Instructions -->
-  <string name="tour_request_start">Abriu o Omni Notes pela primeira vez, deseja ver uma apresentação da aplicação?</string>
-  <string name="tour_listactivity_intro_title">Bem-vindo ao Omni Notes!</string>
+  <string name="tour_request_start">Abriu o Notes™ Pro pela primeira vez, deseja ver uma apresentação da aplicação?</string>
+  <string name="tour_listactivity_intro_title">Bem-vindo ao Notes™ Pro!</string>
   <string name="tour_listactivity_intro_detail">pressione \"Continuar\" para retomar a apresentação</string>
   <string name="tour_listactivity_actions_title">Acções</string>
   <string name="tour_listactivity_actions_detail">Criar novas notas, ordená-las, aceder às preferências</string>
@@ -378,7 +378,7 @@
   <string name="tour_detailactivity_save_title">Guarde</string>
   <string name="tour_detailactivity_save_detail">Toque simplesmente no ícone de navegação \'para cima\' ou no botão \'voltar\' do seu dispositivo</string>
   <string name="tour_listactivity_final_title">Desfrute</string>
-  <string name="tour_listactivity_final_detail">Obrigado por usar o Omni Notes \nA alternativa de código aberto para anotações de produtividade e lazer!</string>
+  <string name="tour_listactivity_final_detail">Obrigado por usar o Notes™ Pro \nA alternativa de código aberto para anotações de produtividade e lazer!</string>
   <string name="tour_community">Registe-se na comunidade para ajudar!</string>
   <!-- Accessibility -->
   <string name="drawer_open">gaveta aberta</string>
