--- a/omniNotes/src/main/res/values-zh-rTW/strings.xml
+++ b/omniNotes/src/main/res/values-zh-rTW/strings.xml
@@ -21,7 +21,7 @@
   <string name="title_item_list">筆記</string>
   <string name="add_note">新增筆記</string>
   <string name="title">標題</string>
-  <string name="title_activity_list">Omni Notes</string>
+  <string name="title_activity_list">Notes™ Pro</string>
   <string name="search">搜索</string>
   <string name="search_hint">在筆記中搜索</string>
   <string name="content">内容</string>
@@ -51,7 +51,7 @@
   <string name="note_unarchived">已從封存中還原筆記</string>
   <string name="note">筆記</string>
   <string name="share_message_chooser">分享</string>
-  <string name="shared_content_sign">\n【by Omni Notes】</string>
+  <string name="shared_content_sign">\n【by Notes™ Pro】</string>
   <string name="sort">排序</string>
   <string name="select_sorting_column">按排序</string>
   <string name="tap_to_undo">點擊重做</string>
@@ -106,7 +106,7 @@
   <string name="delete_category_confirmation">This category is used by some notes.\nConfirm notes un-categorization and category deletion?</string>
   <string name="discard">取消</string>
   <string name="remove_category">移除类别</string>
-  <string name="no_tags_created">No tags available yet\nCreate them by writing hashtags into your notes</string>
+  <string name="no_tags_created">No tags available yet!</string>
   <string name="no_categories_created">尚未创建类别</string>
   <string name="notes_category_removed">类别已从记事中移除</string>
   <string name="notes_categorized_as">记事已分类为</string>
@@ -126,10 +126,10 @@
   <string name="checklist_keep_checked">保留已勾选事项</string>
   <string name="checklist_keep_symbols">保留复选标记（便于记忆已勾选项）</string>
   <string name="sketch">手绘</string>
-  <string name="crash_dialog_text">Omni Notes\n 出错。是否向开发者发送报告?</string>
+  <string name="crash_dialog_text">Notes™ Pro\n 出错。是否向开发者发送报告?</string>
   <string name="crash_dialog_comment_prompt">在此插入可选注释</string>
-  <string name="crash_toast">Omni Notes出現了一些錯誤\n, 將向開發者發送錯誤報告！</string>
-  <string name="new_update_available">检测到新版本 Omni Notes，是否更新?</string>
+  <string name="crash_toast">Notes™ Pro出現了一些錯誤\n, 將向開發者發送錯誤報告！</string>
+  <string name="new_update_available">检测到新版本 Notes™ Pro，是否更新?</string>
   <string name="update">更新并评分！</string>
   <string name="not_now">稍后</string>
   <string name="title_activity_sketch">手绘</string>
@@ -204,7 +204,7 @@
   <string name="info">信息</string>
   <string name="completed">Completed</string>
   <!-- Settings -->
-  <string name="dashclock_description">显示Omni Notes统计数据及最近提醒</string>
+  <string name="dashclock_description">显示Notes™ Pro统计数据及最近提醒</string>
   <string name="settings">设置</string>
   <string name="settings_about">信息</string>
   <string name="settings_category_other">其他</string>
@@ -356,8 +356,8 @@
   <string name="stats_max_characters">Max chars</string>
   <string name="stats_avg_characters">Average chars</string>
   <!-- Instructions -->
-  <string name="tour_request_start">这是您第一次使用Omni Note，您是否希望观看用户引导？</string>
-  <string name="tour_listactivity_intro_title">欢迎使用 Omni Notes ！</string>
+  <string name="tour_request_start">这是您第一次使用Notes™ Pro，您是否希望观看用户引导？</string>
+  <string name="tour_listactivity_intro_title">欢迎使用 Notes™ Pro ！</string>
   <string name="tour_listactivity_intro_detail">点击\"继续\"观看引导</string>
   <string name="tour_listactivity_actions_title">操作</string>
   <string name="tour_listactivity_actions_detail">创建新记事并排序，访问首选项</string>
@@ -372,13 +372,13 @@
   <string name="tour_detailactivity_reminder_title">只需点击</string>
   <string name="tour_detailactivity_reminder_detail">在附件，地点及提醒上点击或长按会有不同的效果！</string>
   <string name="tour_detailactivity_links_title">链接</string>
-  <string name="tour_detailactivity_links_detail">URL, e-mail addresses and telephone numbers recognition</string>
+ <string name="tour_detailactivity_links_detail">Add various kinds of media files in your notes</string>
   <string name="tour_detailactivity_swipe_title">滑动手势</string>
   <string name="tour_detailactivity_swipe_detail">在当前记事编辑视图下 \n 创建新记事</string>
   <string name="tour_detailactivity_save_title">保存</string>
   <string name="tour_detailactivity_save_detail">点击“向上”导航图标或您设备的后退键即可保存</string>
   <string name="tour_listactivity_final_title">祝您使用愉快</string>
-  <string name="tour_listactivity_final_detail">感謝你使用 Omni Notes \n該開源供工作效率和休閒筆記!</string>
+  <string name="tour_listactivity_final_detail">感謝你使用 Notes™ Pro \n該開源供工作效率和休閒筆記!</string>
   <string name="tour_community">登記以參加社群！</string>
   <!-- Accessibility -->
   <string name="drawer_open">抽屉打开</string>
